syntax = "proto3";

package peers_touch.model.social.v1;

import "google/protobuf/timestamp.proto";
import "domain/social/post.proto";

option go_package = "github.com/peers-labs/peers-touch/station/frame/touch/model;model";

message Comment {
  string id = 1;
  string post_id = 2;
  string author_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool is_deleted = 7;
  
  PostAuthor author = 10;
  int64 likes_count = 11;
  bool is_liked = 12;
  
  string reply_to_comment_id = 20;
  int64 replies_count = 21;
}

message CreateCommentRequest {
  string post_id = 1;
  string content = 2;
  string reply_to_comment_id = 3;
}

message CreateCommentResponse {
  Comment comment = 1;
}

message UpdateCommentRequest {
  string comment_id = 1;
  string content = 2;
}

message UpdateCommentResponse {
  Comment comment = 1;
}

message DeleteCommentRequest {
  string comment_id = 1;
}

message DeleteCommentResponse {
  bool success = 1;
}

message GetCommentsRequest {
  string post_id = 1;
  string cursor = 2;
  int32 limit = 3;
  CommentSort sort = 4;
}

message GetCommentsResponse {
  repeated Comment comments = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

enum CommentSort {
  NEWEST = 0;
  OLDEST = 1;
  MOST_LIKED = 2;
}

message LikeCommentRequest {
  string comment_id = 1;
}

message LikeCommentResponse {
  bool success = 1;
  int64 new_likes_count = 2;
}

message UnlikeCommentRequest {
  string comment_id = 1;
}

message UnlikeCommentResponse {
  bool success = 1;
  int64 new_likes_count = 2;
}
